--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Casamiento</title>
-    <link rel="icon" href="/material/heart.png">
+    <link rel="icon" href="/css/heart.png">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
